<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>

    <!-- ACTION LABELS -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_browser">Show in browser</string>
    <string name="action_map">Show on map</string>
    <string name="action_share">Share</string>
    <string name="action_share_title">Share</string>
    <string name="action_location">View location</string>

    <!-- TITLES -->
    <string name="title_activity_detail">Daily forecast</string>
    <string name="title_activity_settings">Settings</string>

    <!-- PREFERENCES -->
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_title">Temperature units</string>
    <string name="pref_units_value_default" translatable="false">@string/pref_units_value_cel</string>
    <string name="pref_units_value_cel" translatable="false">Celsius</string>
    <string name="pref_units_value_fah" translatable="false">Fahrenheit</string>
    <string name="pref_units_label_metrics">Metrics</string>
    <string name="pref_units_label_imperial">Imperial</string>

    <string name="pref_icon_key" translatable="false">icon</string>
    <string name="pref_icon_label">Show icon</string>
    <string name="pref_icon_summary_on">Shown</string>
    <string name="pref_icon_summary_off">Hidden</string>

    <!-- ERRORS -->
    <string name="error_location_format_invalid">Location format is invalid</string>

</resources>
