<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.green.rabbit.sunshine.app.common.CustomEditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        />
    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title"
        android:defaultValue="@string/pref_units_value_default"
        android:entries="@array/pref_units_labels"
        android:entryValues="@array/pref_units_values"
        android:summary="%s"
        />
    <CheckBoxPreference
        android:key="@string/pref_icon_key"
        android:title="@string/pref_icon_label"
        android:defaultValue="@bool/pref_icon_default"
        android:summaryOn="@string/pref_icon_summary_on"
        android:summaryOff="@string/pref_icon_summary_off"
        />
</PreferenceScreen>